--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,24 @@
+{
+  "buildCommand": "echo 'Static site - no build needed'",
+  "outputDirectory": "./",
+  "cleanUrls": true,
+  "trailingSlash": false,
+  "headers": [
+    {
+      "source": "/.*",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=3600, s-maxage=3600"
+        }
+      ]
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/:path*",
+      "destination": "/index.html"
+    }
+  ]
+}
 
